<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen8"
    tools:context=".loginregist.Register">

    <TextView
        android:id="@+id/namatoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warungku"
        android:textSize="40sp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/etNamaWarung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namatoko"
        android:layout_marginTop="10dp"
        android:hint="@string/txt_nama_warung"
        android:inputType="text" />

    <EditText
        android:id="@+id/etHP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNamaWarung"
        android:layout_marginTop="10dp"
        android:hint="@string/nomer_handphone"
        android:inputType="number" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etHP"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        />

    <TextView
        android:id="@+id/backLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>