<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen8"
    tools:context=".loginregist.ForgotPassword"
    android:background="@color/darkmodeblck">

    <TextView
        android:id="@+id/namatoko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warungku"
        android:textSize="40sp"
        android:layout_marginTop="@dimen/dimen80"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/namatoko"
        android:layout_marginTop="10dp"
        android:hint="@string/masukkan_email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="@dimen/dimen8"
        />

    <Button
        android:id="@+id/btnresetpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmail"
        android:layout_marginTop="15dp"
        android:text="@string/reset_password"
        android:background="@drawable/button_utama"
        />

    <ImageView
        android:id="@+id/backtoLogin"
        android:layout_width="@dimen/dimen40"
        android:layout_height="@dimen/dimen40"
        android:src="@drawable/ic_back"
        android:layout_marginTop="85dp"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnresetpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen10"
        android:visibility="gone"
        />

</RelativeLayout>